tests/snapshots/file@super@super_in_top_level_function.lox.snap
---
source: tests/common/mod.rs
description: "  super.bar(); // Error at 'super': Can't use 'super' outside of a class.\nfun foo() {\n}"
input_file: crafting_interpreters_test_files/super/super_in_top_level_function.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × can't use 'super' outside of a class
   ╭─[1:3]
 1 │   super.bar(); // Error at 'super': Can't use 'super' outside of a class.
   ·   ──┬──
   ·     ╰── here
 2 │ fun foo() {
   ╰────
